deployment-canary.yaml
---
# Source: nodeapi-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloapi-canary
  namespace: test
  labels:
    name: helloapi
    version: "1.0"
    managed-by: vishal
spec:
  replicas: 1
  selector:
    matchLabels:
      name: helloapi
      zone: dev
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: helloapi
        name: helloapi
        version: v2
        release: stable
        tier: fe
        zone: dev
    spec:
      containers:
        - name: helloapi-cntr
          image: "phoenix1984/helloapp:v2"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          resources:
            limits:
              cpu: 1000m
              memory: 256Mi
            requests:
              cpu: 500m
              memory: 128Mi
