destination.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: helloapi
  namespace: test
spec:
  host: helloapi
  subsets:
    - name: stable
      labels:
        version: v1
    - name: canary
      labels:
        version: v2
