virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloapi
  namespace: test
spec:
  gateways:
  - test-gateway
  hosts:
  - 'hello.example.com'
  http:
  - match:
    - uri:
        prefix: /hello
    route:
    - destination:
        host: helloapi
        port:
          number: 5000
